<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/theme_background"
        tools:context=".ui.activity.TestimonySelectorActivity">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/toolbar_back"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:text="@string/streaming_panel"
                    android:textAlignment="center"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="@dimen/_18ssp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.MaterialToolbar>

        <TextView
            android:id="@+id/video_selector_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20ssp"
            android:layout_marginTop="@dimen/_190sdp"
            android:background="@drawable/select_btn_back"
            android:padding="@dimen/_10sdp"
            android:text="@string/select_testimony"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <TextView
            android:id="@+id/watch_testimony"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20ssp"
            android:layout_marginTop="@dimen/_80sdp"
            android:background="@drawable/select_btn_back"
            android:padding="@dimen/_10sdp"
            android:text="@string/watch_it"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/video_selector_btn" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/next_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_30sdp"
            android:layout_marginEnd="308dp"
            android:layout_marginBottom="120dp"
            android:backgroundTint="@color/white"
            android:src="@drawable/ic_next_page"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>