<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/theme_background"
        tools:context=".ui.activity.UploadTestimonyActivity">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/toolbar_back"
            app:layout_constraintTop_toTopOf="parent"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/upload_testimony"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="@dimen/_18ssp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.MaterialToolbar>

        <EditText
            android:id="@+id/testimony_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20ssp"
            android:layout_marginTop="36dp"
            android:background="@drawable/select_btn_back"
            android:padding="@dimen/_10sdp"
            android:hint="@string/detail_of_this_testimony"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.509"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <Spinner
            android:id="@+id/testimonyCategory"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            android:textSize="@dimen/_15ssp"
            android:layout_marginHorizontal="@dimen/_20sdp"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/select_btn_back"
            app:layout_constraintTop_toBottomOf="@id/testimony_detail"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/_30sdp"
            />

        <TextView
            android:id="@+id/video_upload_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_50ssp"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/select_btn_back"
            android:padding="@dimen/_10sdp"
            android:text="@string/upload"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/testimonyCategory" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginVertical="@dimen/_15sdp"
            android:background="@drawable/curved_white_back"
            android:padding="@dimen/_15sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/file_status"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/testimony_uploading"
                android:textColor="#0A6C9D"
                android:textStyle="bold"
                android:textSize="@dimen/_15ssp"
                android:layout_marginHorizontal="@dimen/_2sdp"
                app:layout_constraintBottom_toTopOf="@id/file_name"
                android:textAlignment="center"
                android:layout_marginVertical="@dimen/_15sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <TextView
                android:id="@+id/file_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/filename_type"
                android:textSize="@dimen/_15ssp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_marginTop="@dimen/_15ssp"
                android:textColor="@color/center_color"
                android:layout_marginHorizontal="@dimen/_2sdp"
                app:layout_constraintTop_toBottomOf="@id/file_status"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <ProgressBar
                android:id="@+id/progress_bar_upload"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:progress="00"
                android:progressDrawable="@drawable/progress_bar_custom"
                android:layout_marginHorizontal="@dimen/_2sdp"
                android:layout_marginTop="@dimen/_15sdp"
                app:layout_constraintTop_toBottomOf="@id/file_name"
                app:layout_constraintStart_toStartOf="@id/file_name"
                app:layout_constraintEnd_toEndOf="@id/file_name"
                />

            <LinearLayout
                android:id="@+id/linear_l"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/_12sdp"
                android:layout_marginHorizontal="@dimen/_2sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                app:layout_constraintTop_toBottomOf="@id/progress_bar_upload"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/pause_btn"
                app:layout_constraintEnd_toEndOf="parent"
                >
                <TextView
                    android:id="@+id/mb_counter"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/holo_blue_dark"
                    android:layout_weight="1"
                    android:text="40/100mb"
                    />
                <TextView
                    android:id="@+id/percentage_counter"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@android:color/holo_blue_dark"
                    android:text="40%"
                    android:textAlignment="textEnd"
                    />
            </LinearLayout>

            <TextView
                android:id="@+id/pause_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_2ssp"
                android:background="@drawable/pause_btn_back"
                android:padding="@dimen/_12ssp"
                android:text="pause upload"
                android:textAlignment="center"
                android:textColor="@android:color/holo_blue_bright"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/linear_l" />

            <TextView
                android:id="@+id/cancel_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_2ssp"
                android:layout_marginVertical="@dimen/_10sdp"
                android:background="@drawable/pause_btn_back"
                android:padding="@dimen/_12ssp"
                android:text="cancel upload"
                android:textAlignment="center"
                android:textColor="@android:color/holo_orange_dark"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pause_btn" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>